--- a/src/style/login.css
+++ b/src/style/login.css
@@ -5,11 +5,41 @@
   display: flex;
   flex-wrap: wrap;
   position: relative;
+  overflow: hidden; /* 회전된 이미지가 잘리지 않도록 설정 */
 }
 
-.container::after {
-  background-color: #92a8cc;
+.container::before {
   content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.08);
+  background-image: 
+    linear-gradient(to right, transparent 0, transparent 15px, rgba(255, 255, 255, 0.08) 15px),
+    linear-gradient(to bottom, transparent 0, transparent 15px, rgba(255, 255, 255, 0.08) 15px);
+  background-size: 30px 30px;
+  opacity: 0.5;
+  z-index: 0;
+}
+
+.background-image {
+  position: absolute;
+  width: 35%;
+  height: 70%;
+  /* background-image: url(../public/keyboard.jpg); */
+  background-size: cover; /* 이미지를 가득 채우도록 설정 */
+  background-position: center;
+  background-repeat: no-repeat; /* 반복하지 않도록 설정 */
+  z-index: 0; /* 배경으로 설정 */
+  mix-blend-mode: multiply; /* 흰색 부분을 투명하게 처리 */
+ /* transform: rotate(-45deg); /* 중앙으로 이동 후 45도 회전 */
+  opacity: 0.1;
+}
+
+.content-area {
+  background-color: #92a8cc;
   position: fixed;
   margin-left: 17.5vw;
   margin-top: 13vh;
@@ -17,14 +47,29 @@
   height: 74vh;
   border: 2px solid #abbdda;
   box-shadow: 0 0 0 2px #63758e, 0 0 0 3px #4f6180, 0 0 0 4px #b9cbe9;
-    border-radius: 3vh;
-    z-index: 1;
+  border-radius: 3vh;
+  z-index: 1;
+}
+
+
+.title {
+  width: 100%;
+  height: 10vh;
+  padding-bottom: 0vh;
+  z-index: 1;
+}
+
+.title p {
+  text-align: center;
+  color: #00796b;
+  font-size: 70px;
+  margin-top: 1vh;
 }
 
 .leftcontainer {
   display: flex;
-  margin-top: 15vh;
   margin-left: 19vw;
+  margin-bottom: 10vh;
   width: 25%;
   height: 70%;
   border: 1px solid #b3d0fe;
@@ -70,7 +115,6 @@
 
 
 .rightcontainer {
-  margin-top: 15vh;
   margin-left: 2vw;
   width: 35%;
   height: 70%;
@@ -94,11 +138,6 @@
   padding-left: 10px;
   color: rgb(235, 232, 232);
   background: linear-gradient(to bottom, #8b9dbc, #596371);
-}
-
-h1 {
-  text-align: center;
-  color: #00796b;
 }
 
 .leftcontainer p {
