--- a/src/style/waitingRoom.css
+++ b/src/style/waitingRoom.css
@@ -1,10 +1,144 @@
 .wr_container {
   height: 100vh;
   width: 100vw;
-  background-color: #9db3d6;
   display: flex;
   flex-wrap: wrap;
   position: relative;
+  user-select: none;
+  background-color: #9db3d6;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.wr_container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 500%;
+  height: 500%;
+  background-image: url("/public/image/keyboard.jpg");
+  background-repeat: repeat;
+  background-size: 300px;
+  background-position: center;
+  transform: rotate(-15deg);
+  transform-origin: 0px 5000px;
+  opacity: 0.05;
+  z-index: -1;
+}
+
+.wr_back {
+  position: fixed;
+  top: 4vh;
+  left: 2.5vw;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background: linear-gradient(to bottom, #94a7cb, #6e7d8d);
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px #63758e, 0 0 0 4px #4f6180;
+  z-index: 5;
+}
+
+.wr_back:hover {
+  background: linear-gradient(to bottom, #a6bcdf, #7f94b5);
+}
+
+.wr_back:active {
+  background: linear-gradient(to bottom, #8090a4, #5f6b7a);
+}
+
+.wr_back::before,
+.wr_back::after {
+  content: '';
+  position: absolute;
+}
+
+.wr_back::before {
+  width: 25px;
+  height: 6px;
+  background-color: #e7e7e7;
+  top: 50%;
+  left: 13px;
+  transform: translateY(-50%);
+}
+
+.wr_back:hover::before {
+  background-color: #f0f0f0;
+}
+
+.wr_back::after {
+  width: 16px;
+  height: 16px;
+  top: 17px;
+  left: 13px;
+  border-left: 5px solid #e7e7e7;
+  border-bottom: 5px solid #e7e7e7;
+  transform: rotate(45deg);
+  box-sizing: border-box;
+}
+
+.wr_back:hover::after {
+  border-left: 5px solid #f0f0f0;
+  border-bottom: 5px solid #f0f0f0;
+}
+
+.wr_topcontainer {
+  position: fixed;
+  top: 5vh;
+  left: 50vw;
+  transform: translateX(-50%);
+  height: 8vh;
+  width: 40vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 3;
+}
+
+.wr_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: 'Cafe24Ssurround';
+  font-size: calc(2vh + 2vw);
+  color: #f8f4f0;
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(to bottom, #a0bbed, #718ca9);
+  padding: 1.5vh 2.5vw;
+  border-radius: 2vh;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3),
+    inset 0 0 20px rgba(0, 0, 0, 0.5);
+  letter-spacing: 0.2vw;
+  text-transform: uppercase;
+  width: 40vw;
+  height: auto;
+  border: 2px solid #63758e;
+  position: relative;
+  z-index: 1;
+}
+
+.wr_title input {
+  position: absolute;
+  text-align: center;
+  font-size: calc(1.8vh + 1.8vw);
+  font-family: 'Cafe24Ssurround';
+  color: #343434;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translatey(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #63758e;
+  outline: none;
+  border-radius: 1.5vh;
+  letter-spacing: 0.15vw;
 }
 
 .wr_container::after {
@@ -12,16 +146,18 @@
   content: '';
   position: fixed;
   margin-left: 17.5vw;
-  margin-top: 13vh;
+  margin-top: 17vh;
   width: 65vw;
   height: 74vh;
   border: 2px solid #abbdda;
   box-shadow: 0 0 0 2px #63758e, 0 0 0 3px #4f6180, 0 0 0 4px #b9cbe9;
-    border-radius: 3vh;
-    z-index: 1;
+  border-radius: 3vh;
+  z-index: 1;
 }
+
 .wr_leftcontainer {
-  margin-top: 15vh;
+  position: relative;
+  margin-top: 19vh;
   margin-left: 19vw;
   width: 35%;
   height: 70%;
@@ -82,6 +218,98 @@
   justify-content: center;
 }
 
+.wr_kick {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10000;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 2vh 2vw;
+  border-radius: 2vh;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 0 2px #63758e, 0 0 0 4px #4f6180;
+}
+
+.wr_kick p {
+  color: #f3ebe6;
+  font-size: calc(1vh + 1vw);
+  margin-bottom: 2vh;
+  text-align: center;
+  font-family: 'Cafe24Ssurround';
+}
+
+.wr_kickbutton {
+  background: linear-gradient(to bottom, #ed5959, #753434);
+  color: #f3ebe6;
+  border: none;
+  padding: 1vh 2vw;
+  font-size: calc(0.9vh + 1vw);
+  display: flex;
+  border-radius: 1vh;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  font-family: 'Cafe24Ssurround';
+  letter-spacing: 0.1vw;
+  -webkit-text-stroke: 0.05vh #303030;
+  box-shadow: 0 0 0 1px #c55f5f, 0 0 0 2px #820606;
+  margin: auto;
+}
+
+.wr_kickbutton:hover {
+  background: linear-gradient(to bottom, #f07575, #8f4141);
+  transform: scale(1.05);
+}
+
+.wr_kickbutton:active {
+  transform: scale(0.95);
+}
+
+.wr_cancelbutton {
+  position: absolute;
+  top: 1vh;
+  right: 1vw;
+  background: none;
+  border: none;
+  font-family: 'Cafe24Ssurround';
+  font-size: calc(1.2vh + 1.2vw);
+  color: gray;
+  cursor: pointer;
+}
+
+.wr_cancelbutton:hover {
+  transform: scale(1.05);
+  color: rgb(149, 148, 148);
+}
+
+.wr_cancelbutton:active {
+  transform: scale(0.95);
+  color: gray;
+
+}
+
+.wr_x {
+  position: absolute;
+  right: 0.8vw;
+  top: 0vh;
+  font-size: calc(1.2vh + 1.2vw);
+  color: #b2927d;
+  -webkit-text-stroke: 0.1vh #303030;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform 0.1s ease;
+}
+
+.wr_x:hover {
+  transform: scale(1.05);
+  color: #d3b9a2;
+}
+
+.wr_x:active {
+  transform: scale(0.95);
+}
+
 .wr_player1 img {
   position: absolute;
   height: 100%;
@@ -116,8 +344,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #7d7d7d, #303030) ;
-  color: #d48248;
+  background: linear-gradient(to bottom, #7d7d7d, #303030);
+  color: #ca7f49;
   -webkit-text-stroke: 0.1vh black;
   z-index: 1;
 }
@@ -187,7 +415,7 @@
   border: 1px solid black;
   background-color: #e1e4ea;
   height: 60%;
-  width: 50%;
+  width: 28%;
   margin-top: 3.9%;
   display: flex;
   flex-direction: row;
@@ -197,19 +425,20 @@
 }
 
 .wr_bottom img {
-  height: 75%;
-  margin-left: 23%;
+  height: 50%;
+  margin-top: 5%;
+  margin-left: 13%;
 }
 
 .wr_bottom p {
   font-size: calc(1vh + 1vw);
   font-weight: 600;
-  margin-left: 5%;
-  margin-top: 17%;
+  margin-left: 4%;
+  margin-top: 28%;
 }
 
 .wr_bottom_left_num {
-  font-size: calc(2vh + 2vw);
+  font-size: calc(1.9vh + 1.9vw);
   font-weight: 900;
   margin-left: 15%;
   -webkit-text-stroke: calc(0.1vh + 0.1vw) #e1e4ea;
@@ -218,9 +447,9 @@
 .wr_bottom_start {
   border: 1px solid #c56b5f;
   box-shadow: 0 0 0 1px #821406, 0 0 0 2px #690d01;
-  width: 35%;
+  width: 28%;
   height: 80%;
-  margin-left: 8%;
+  margin-left: 6%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -229,12 +458,8 @@
   color: #eef4f4;
   -webkit-text-stroke: calc(0.06vh + 0.06vw) #690d01;
   font-weight: 900;
-  font-size: calc((1.3vh + 1.3vw));
+  font-size: calc((1.1vh + 1.1vw));
   letter-spacing: 0.1vw;
-}
-
-.wr_bottom_start::after {
-  content: "게임 시작";
 }
 
 .wr_bottom_start:hover {
@@ -252,9 +477,9 @@
 .wr_bottom_ready {
   border: 1px solid #c56b5f;
   box-shadow: 0 0 0 1px #826d06, 0 0 0 2px #694a01;
-  width: 35%;
+  width: 28%;
   height: 80%;
-  margin-left: 8%;
+  margin-left: 3%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -263,12 +488,8 @@
   color: #eef4f4;
   -webkit-text-stroke: calc(0.06vh + 0.06vw) #694a01;
   font-weight: 900;
-  font-size: calc((1.3vh + 1.3vw));
+  font-size: calc((1.1vh + 1.1vw));
   letter-spacing: 0.1vw;
-}
-
-.wr_bottom_ready::after {
-  content: "준비 하기";
 }
 
 .wr_bottom_ready:hover {
@@ -280,11 +501,39 @@
 .wr_bottom_ready:active {
   scale: 1;
   box-shadow: 0 0 0 1px #826d06, 0 0 0 2px #694a01;
+}
+
+.wr_bottom_ready_not {
+  border: 1px solid #bababa;
+  box-shadow: 0 0 0 1px #7b7b7b, 0 0 0 2px #6c6c6c;
+  width: 28%;
+  height: 80%;
+  margin-left: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1.2vh;
+  background: linear-gradient(to bottom, rgb(210, 210, 210), rgb(168, 168, 168), rgb(95, 95, 95));
+  color: #eef4f4;
+  -webkit-text-stroke: calc(0.06vh + 0.06vw) #5e5e5e;
+  font-weight: 900;
+  font-size: calc((1.1vh + 1.1vw));
+  letter-spacing: 0.1vw;
+}
+
+.wr_bottom_ready_not:hover {
+  scale: 1.02;
+  box-shadow: 0 0 0 1px #7b7b7b, 0 0 0 2px #6c6c6c;
   cursor: pointer;
 }
 
+.wr_bottom_ready_not:active {
+  scale: 1;
+  box-shadow: 0 0 0 1px #7b7b7b, 0 0 0 2px #6c6c6c;
+}
+
 .wr_rightcontainer {
-  margin-top: 15vh;
+  margin-top: 19vh;
   margin-left: 2vw;
   width: 25%;
   height: 70%;
@@ -319,7 +568,7 @@
   margin-bottom: 0.3vh;
   margin-top: 0.2vh;
   align-self: center;
-  color: rgb(236, 95, 95);
+  color: rgb(238, 83, 83);
 }
 
 .wr_inputContainer {
@@ -348,7 +597,7 @@
   align-items: center;
   border: none;
   font-size: calc(0.75vh + 0.75vw);
-  color:#fff;
+  color: #fff;
   -webkit-text-stroke: calc(0.05vh + 0.05vw) #555555;
   font-weight: 900;
   cursor: pointer;
@@ -377,19 +626,19 @@
   height: 6vh;
   border-radius: 3vh;
   box-shadow: 0 0 0 2px #726825, 0 0 0 3px #322e11;
-  background:linear-gradient(to top, #f0da45, #dec947, #b09b3a) top, linear-gradient(to bottom, #f0da45, #dec947, #b09b3a) bottom;
+  background: linear-gradient(to top, #f0da45, #dec947, #b09b3a) top, linear-gradient(to bottom, #f0da45, #dec947, #b09b3a) bottom;
   background-size: 100% 50%;
   background-repeat: no-repeat;
   color: #fffce9;
-  -webkit-text-stroke: calc(0.04vh + 0.04vw) #a29332;
+  -webkit-text-stroke: calc(0.04vh + 0.05vw) #574f1c;
   transition: width 0.5s ease;
   z-index: 4;
 }
 
 .wr_rule:hover {
   cursor: pointer;
-  scale: 1.02;
-  box-shadow: 0 0 0 2px #726825, 0 0 0 4px #322e11; 
+  scale: 1.01;
+  box-shadow: 0 0 0 2px #726825, 0 0 0 4px #322e11;
 }
 
 .wr_rule:active {
@@ -440,7 +689,7 @@
   right: 5vw;
   top: 8vh;
   width: 30vw;
-  height: 50vh;
+  height: 42vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -453,7 +702,6 @@
   opacity: 0;
   transition: opacity 1s ease;
   z-index: 3;
-  cursor: default;
 }
 
 .wr_rule_content.visible {
@@ -462,35 +710,57 @@
 }
 
 .wr_rule_content h3 {
-  font-size: calc(1vh + 1vw);
-  color: #11324D;
-  margin-top: 1vh;
+  font-size: calc(1.1vh + 1.1vw);
+  color: #102b40;
+  margin-top: 3vh;
   width: 100%;
   text-align: center;
-  letter-spacing: 3px;
-  font-family: 'VITRO';
+  font-weight: 900;
 }
 
 .wr_rule_content ul {
-  list-style: none;
+  list-style: "※  ";
   padding: 0;
-  margin-left: 1vw;
+  margin-left: 2.5vw;
   margin-top: 0;
 }
 
 .wr_rule_content li {
-  font-size: calc(0.65vh + 0.65vw);
-  color: #333;
-  line-height: 1.5;
-  letter-spacing: 0.2px;
+  font-size: calc(0.8vh + 0.8vw);
+  color: #1f3a50;
+  line-height: 1.8;
+  letter-spacing: 0.13vw;
   position: relative;
-  font-weight: 400;
+  font-weight: 600;
   word-break: keep-all;
-  margin-top: 0.5vh;
+  margin-top: 0.3vh;
+  margin-bottom: 1.4vh;
+}
+
+.wr_rule_content .highlightt {
+  font-size: calc(0.85vh + 0.85vw);
+  font-weight: bold;
+  color: #D9534F;
+  letter-spacing: 0.2vw;
 }
 
 .wr_rule_content .highlight {
+  font-size: calc(0.85vh + 0.85vw);
   font-weight: bold;
-  color: #D9534F;
+  color: #f8645f;
+  letter-spacing: 0.2vw;
+}
+
+.wr_rule_content .lowlightt {
+  font-size: calc(0.85vh + 0.85vw);
+  font-weight: bold;
+  color: #1874be;
+  letter-spacing: 0.2vw;
+}
+
+.wr_rule_content .lowlight {
+  font-size: calc(0.85vh + 0.85vw);
+  font-weight: bold;
+  color: #3da8ff;
   letter-spacing: 0.2vw;
 }
