--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,271 +1,308 @@
 .lg-container {
-  height: 100vh;
-  width: 100vw;
-  background-image: url(../../public/image/loginbackground.avif);
-  background-color: rgba(10, 16, 29, 0.5); /* 어두운 색상 추가 (검정색 반투명) */
-  background-blend-mode: darken; /* 두 배경을 혼합 */
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #fff;
   display: flex;
-  flex-wrap: wrap;
+  min-height: 100vh;
+  background-color: #bed7ff;
   position: relative;
-  overflow: hidden; 
-} 
-
-
-.lg-container::before {
-
-}
-
-.lg-content-area {
-  background-color: #92a8cc;
-  position: fixed;
-  margin-left: 17.5vw;
-  margin-top: 13vh;
-  width: 65vw;
-  height: 74vh;
-  border: 2px solid #abbdda;
-  box-shadow: 0 0 0 2px #63758e, 0 0 0 3px #4f6180, 0 0 0 4px #b9cbe9;
-  border-radius: 3vh;
-  z-index: 1;
-}
-
-.lg-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 10vh;
-  margin-bottom: 0vh;
-  z-index: 1;
-}
-
-.lg-title h1 {
-  text-align: center;
-  color: rgb(24, 6, 114);
-  font-size: 80px;
-  margin-top: 2vh;
-  margin-bottom: 0vh;
-  
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: white;
-  color: transparent;
-  background-image: url(../../public/image/gukbang.jpg);
-  background-size: 100%;
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: white;
- 
-}
-
-.img1 {
-  margin-top: 2vh;
-  height: 9vh;
-}
-
-.img2 {
-  margin-top: 2vh;
-  height: 9vh;
+  user-select: none;
 }
 
 .lg-leftcontainer {
+  position: relative;
+  width: 55%;
   display: flex;
-  margin-left: 19vw;
-  margin-bottom: 10vh;
-  width: 25%;
-  height: 70%;
-  border: 1px solid #b3d0fe;
-  box-shadow: 0 0 0 1px #7f94b5, 0 0 0 2px #697fa4, 0 0 0 3px #414f65;
-  background:url(../../public/image/gun.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  flex-wrap: wrap;
-  border-radius: 2vh;
-  flex-direction: column; 
-  justify-content: center; /* 가운데 정렬 */
-  align-items: center; /* 가운데 정렬 */
+  flex-direction: column;
+  justify-content: center;
   z-index: 2;
 }
 
-.lg-leftcontainer h1 {  
-  margin-bottom: 9vh;
+.lg-title {
+  margin-left: 10%;
+  position: absolute;
+  top: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5vh;
+  width: 80%;
+  height: 10vh;
+  font-size: 4vh;
+  background-color: #c9ddfd;
+  box-shadow: 0 0 20px #c9ddfdc0;
+  z-index: 2;
 }
 
-.lg-leftcontainer h2 {
-  font-size: 40px;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: white;
-  color: black;
-  margin-bottom: 1vh;
+.lg-title img {
+  height: 8vh;
+  margin-left: 0.5vw;
 }
 
-.lg-leftcontainer input {
-
-  margin-top: 1vh;
-  margin-bottom: 3vh;
-  width: 90%;
-  height: 4vh;
+.lg-title h1 {
+  color: #f4f8ff;
+  -webkit-text-stroke: 2px #1a2a6c;
+  font-size: calc(2.7vh + 2.7vw);
+  font-weight: 900;
 }
 
-.login-button {
-  font-size: 20px;
-  background-color: #583ce6;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px; 
-  cursor: pointer;
-  width: 90%;
-  height: 5vh;
-  margin-top: 3vh;
-  margin-bottom: 1vh;
-  font-family: 'Cafe24Ssurround';
-}
-.signup-button{
-  font-size: 20px;
-  background-color: #190967;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 90%;
-  height: 5vh;
-  margin-top: 3vh;
-  margin-bottom: 1vh;
-  font-family: 'Cafe24Ssurround';
-}
-.lg-leftcontainer button:hover {
-  background-color: #39097d;
+.lg-title div {
+  color: #f4f8ff;
+  -webkit-text-stroke: 1px #1a2a6c;
+  font-size: calc(1vh + 1vw);
+  font-weight: 900;
 }
 
-.lg-leftcontainer p {
-  width: 100%;
-  text-align: center;
-  display: block;
-  margin-top: 10px;
-  font-size: 23px;
+.lg-rule {
+  width: 80%;
+  margin-top: 5%;
+  margin-left: 10%;
+  height: 60vh;
+  width: 80%;
+  color: #1a2a6c;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1vh;
+  padding: 1%;
 }
 
-.lg-input {
-  width: 90%;
-  padding: 10px;
-  margin-bottom: 3vh;
-  border: 1px solid #00796b;
-  border-radius: 5px;
+.lg-rule li {
+  font-family: arial;
+  list-style: "✔ ";
+  padding-left: calc(1vh + 1vw);
+  text-indent: calc(-1.1vh + -1vw);
+  font-size: calc(1vh + 1vw);
+  line-height: calc(1.55vh + 1.55vw);
+  text-align: justify;
+}
+
+.lg-rule strong {
+  color: #165a9e;
+  font-size: calc(1.1vh + 1.1vw);
+}
+
+.lg-rule span {
+  color: rgb(225, 43, 43);
+  font-weight: 600;
+  font-size: calc(1.1vh + 1.1vw);
 }
 
 .lg-rightcontainer {
+  margin-left: 3%;
+  width: 42%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  margin-left: 2vw;
-  width: 35%;
-  height: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  box-shadow: 0 0 0 1px #7f94b5, 0 0 0 2px #697fa4, 0 0 0 3px #414f65;
-  border-radius: 1vh;
-  overflow: hidden;
-  z-index: 2;
+  z-index: 1;
 }
 
-.lg-background-image {
-  position: absolute; /* 절대 위치 설정 */
-  width: 100%; /* 전체 너비 사용 */
-  height: 100%; /* 전체 높이 사용 */
-  background-image: url(../../public/image/closeupkeyboard.jpg);
-  background-color: rgba(71, 119, 215, 0.5); /* 어두운 색상 추가 (검정색 반투명) */
-  background-size: cover; /* 이미지를 가득 채우도록 설정 */
-  background-position: center;
-  background-repeat: no-repeat; /* 반복하지 않도록 설정 */
-  z-index: 0; /* 배경으로 설정 */
-  opacity: 10.0; /* 배경 이미지의 투명도 조정 */
+.lg-rightcontainer-back {
+  position: fixed;
+  width: 60vw;
+  height: 200vh;
+  background-color: #5572a0;
+  transform: rotate(13deg);
+  z-index: -1;
+  right: -15vw;
+  box-shadow: 0 0 20px rgba(0, 56, 86, 0.5);
 }
 
-.lg-info-section {
-
-  position: relative; /* 상대 위치 설정 */
-  flex-grow: 1;
+.login-form {
   display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  letter-spacing: 0.03vw;
-  font-size: calc(0.6vh + 0.7vw);
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  width: 65%;
+  height: 60%;
+  padding-left: 4vw;
+  padding-right: 4vw;
+  background: white;
+  border-radius: 0.7vh;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.login-form input {
   width: 100%;
-  padding-left: 10px;
-  color: black;
-  background: rgba(139, 157, 188, 0.7); /* 배경색을 약간 투명하게 설정 */
-  z-index: 1; /* 텍스트가 배경 이미지 위에 오도록 설정 */
+  padding: 1vh;
+  margin-bottom: 1.5rem;
+  border: none;
+  border-bottom: 2px solid #cccccc;
+  font-size: calc(0.7vh + 0.7vw);
+  outline: none;
+  transition: border-color 0.3s ease;
 }
 
-.lg-info-section h2 strong {
-  font-size: 4vh;
-  font-weight: bold; /* 볼드체 */
-  color: white; /* 글자 색상: 빨간색 */
-  padding: 2px 4px; /* 여백 추가 */
-  border-radius: 3px; /* 모서리 둥글게 */
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+.login-form input:focus {
+  border-color: #265fb9;
 }
 
-.lg-rightcontainer h2 {
-  margin-bottom: 0vh;
+.lg-error {
+  position: absolute;
+  top: 50%;
+  color: rgb(227, 16, 16);
+  font-size: calc(0.6vh + 0.6vw);
+  font-family: "arial";
 }
 
-.lg-info-section h1 {
-  margin-bottom: 0.5vh;
-}
-.lg-info-section h2 {
-  line-height: 1.5;
+.login-button {
+  margin-top: 3vh;
+  margin-bottom: 2vh;
+  width: 100%;
+  height: 8%;
+  padding: 1vh;
+  background-color: #335c9e;
+  color: white;
+  border: none;
+  border-radius: 1vh;
+  font-size: calc(0.75vh + 0.75vw);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-weight: 400;
 }
 
+.login-button:hover {
+  background-color: #2b4b7f;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.login-button:active {
+  background-color: #335c9e;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.1s ease;
+}
+
+.lg-or {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  width: 100%;
+  height: 1.5px;
+}
+
+.signup-button {
+  margin-top: 2vh;
+  width: 100%;
+  height: 8%;
+  padding: 1vh;
+  background-color: white;
+  color: #335c9e;
+  border: 2px solid #335c9e;
+  border-radius: 1vh;
+  font-size: calc(0.65vh + 0.65vw);
+  cursor: pointer;
+  transition: all 0.2s ease;
+  font-weight: 600;
+}
+
+.signup-button:hover {
+  color: #2b4b7f;
+  border: 2px solid #2b4b7f;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.signup-button:active {
+  color: #335c9e;
+  border: 2px solid #335c9e;
+  box-shadow: none;
+  transition: all 0.1s ease;
+}
 
 .lg-modal {
   position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  z-index: 100;
+  width: 30vw;
+  height: 40vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2vh;
+}
+
+.lg-modal-overlay {
+  position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
-  display: flex;
-  justify-content: center; /* 수평 중앙 정렬 */
-  align-items: center; /* 수직 중앙 정렬 */
-  z-index: 1000; /* 다른 요소 위에 표시 */
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 99;
 }
 
 .lg-modal-content {
-  background-color: white; /* 모달창 배경색 */
-  padding: 20px;
-  border-radius: 8px; /* 모서리 둥글게 */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
-  width: 400px; /* 모달창 너비 */
-  max-width: 100%; /* 최대 너비 설정 */
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
 }
 
-.lg-modal h4 {
-  display: block; /* 라벨을 블록 요소로 */
-  margin-bottom: 5px; /* 라벨 아래 여백 */
+.lg-modal-content h2 {
+  color: #1a2a6c;
+  font-family: "arial";
+  font-size: calc(1.2vh + 1.2vw);
 }
 
-.lg-modal input {
-  width: 100%; /* 입력 필드 너비를 100%로 */
-  padding: 8px; /* 입력 필드 패딩 */
-  margin-bottom: 15px; /* 입력 필드 아래 여백 */
-  border: 1px solid #ccc; /* 경계선 */
-  border-radius: 4px; /* 모서리 둥글게 */
+.lg-modal-content span {
+  font-weight: 900;
+  font-size: calc(1.6vh + 1.6vw);
+  color: #f1f5fe;
+  -webkit-text-stroke: 1.3px #1a2a6c;
+  font-family: "VITRO";
+  position: relative;
+  top: -0.4vh;
 }
 
-.lg-modal button {
-  padding: 10px 15px; /* 버튼 패딩 */
-  margin-right: 10px; /* 버튼 사이 여백 */
-  border: none; /* 경계선 제거 */
-  border-radius: 4px; /* 모서리 둥글게 */
-  cursor: pointer; /* 커서 포인터로 변경 */
-  margin-top: 2vh;
+.lg-modal-content input {
+  width: 80%;
+  height: 4.5vh;
+  font-size: calc(0.65vh + 0.65vw);
+  outline: none;
+  padding-left: 2vh;
+  border: 1.7px solid #bdbdbd;
+  border-radius: 5px;
+  margin-bottom: 4vh;
 }
 
-.lg-modal button:hover {
-  background-color: #f0f0f0; /* 버튼 호버 시 배경색 변경 */
+.lg-modal-content input:focus {
+  box-shadow: 0 0 7px #2559ad;
+  border: none;
+}
+
+.lg-modal-content button {
+  width: 40%;
+  height: 4vh;
+  background-color: #335c9e;
+  color: white;
+  border: none;
+  border-radius: 1vh;
+  cursor: pointer;
+  font-size: calc(0.6vh + 0.6vw);
+}
+
+.lg-modal-content button:hover {
+  background-color: #2b4b7f;
+}
+
+.lg-modal-content button:last-child {
+  position: absolute;
+  font-family: "Cafe24Ssurround";
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 18px;
+  height: 18px;
+  right: 2vw;
+  top: 3vh;
+  background: none;
+  border: none;
+  color: #1a2a6c;
+  cursor: pointer;
+}
+
+.lg-modal-content button:hover:last-child {
+  color: #0f183d;
 }
