--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,12 @@
   height: 100%;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  font-family: 'VITRO';
+  font-family: "VITRO";
   font-size: 16px;
   width: 100%;
   height: 100%;
@@ -59,29 +60,30 @@ input {
 }
 
 @font-face {
-  font-family: 'VITRO';
-  src: url('./font/VITRO CORE TTF.ttf') format('truetype');
+  font-family: "VITRO";
+  src: url("./font/VITRO CORE TTF.ttf") format("truetype");
   font-weight: 900;
   font-style: bold;
 }
 
 @font-face {
-  font-family: 'VITRO';
-  src: url('./font/VITRO INSPIRE TTF.ttf') format('truetype');
+  font-family: "VITRO";
+  src: url("./font/VITRO INSPIRE TTF.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'VITRO';
-  src: url('./font/VITRO PRIDE TTF.ttf') format('truetype');
+  font-family: "VITRO";
+  src: url("./font/VITRO PRIDE TTF.ttf") format("truetype");
   font-weight: 400;
   font-style: thin;
 }
 
 @font-face {
-  font-family: 'Cafe24Ssurround';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+  font-family: "Cafe24Ssurround";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff")
+    format("woff");
   font-weight: normal;
   font-style: normal;
 }
