--- a/src/style/game.css
+++ b/src/style/game.css
@@ -42,6 +42,10 @@
   z-index: 3000;
 }
 
+.profile img {
+  height: 100%;
+}
+
 .happy-image {
   width: 95%;
   height: 95%;
@@ -74,7 +78,7 @@
   padding-left: 3vw;
   font-weight: 900;
   color: rgb(236, 244, 252);
-  -webkit-text-stroke: 0.12vh #11324D;
+  -webkit-text-stroke: 0.12vh #11324d;
   z-index: 2000;
   border-radius: 40px 60px / 50px 30px;
   border: 0.2vh solid rgb(131, 158, 192);
@@ -107,7 +111,6 @@
   margin-top: 4.5vh;
   height: 2.8vh;
   margin-left: -1.5vw;
-
 }
 
 .ranking {
@@ -128,7 +131,7 @@
 }
 
 .ranking::before {
-  content: "니 등수 :";
+  content: "현재 ";
   font-size: 4.5vh;
   color: #e0e0e0;
   margin-right: 1.5vw;
@@ -163,15 +166,18 @@
 
 @keyframes neon {
   0% {
-    text-shadow: 0 0 20px #8fc1d9, 0 0 30px #8fc1d9, 0 0 40px #8fc1d9, 0 0 50px #8fc1d9, 0 0 60px #8fc1d9;
+    text-shadow: 0 0 20px #8fc1d9, 0 0 30px #8fc1d9, 0 0 40px #8fc1d9,
+      0 0 50px #8fc1d9, 0 0 60px #8fc1d9;
     transform: scale(1);
   }
   50% {
-    text-shadow: 0 0 5px #66b0d4, 0 0 10px #66b0d4, 0 0 15px #66b0d4, 0 0 20px #66b0d4, 0 0 25px #66b0d4;
+    text-shadow: 0 0 5px #66b0d4, 0 0 10px #66b0d4, 0 0 15px #66b0d4,
+      0 0 20px #66b0d4, 0 0 25px #66b0d4;
     transform: scale(1.02);
   }
   100% {
-    text-shadow: 0 0 20px #8fc1d9, 0 0 30px #8fc1d9, 0 0 40px #8fc1d9, 0 0 50px #8fc1d9, 0 0 60px #8fc1d9;
+    text-shadow: 0 0 20px #8fc1d9, 0 0 30px #8fc1d9, 0 0 40px #8fc1d9,
+      0 0 50px #8fc1d9, 0 0 60px #8fc1d9;
     transform: scale(1);
   }
 }
@@ -184,7 +190,7 @@
   margin-left: 19%;
   border-radius: 15px;
   background: linear-gradient(135deg, #9fb9d5, #d5e3f1);
-  border: 0.27vh solid #11324C;
+  border: 0.27vh solid #11324c;
   box-shadow: 0 0 0 0.15vh #539cf0, 0 0 0 0.4vh #6d7c8e;
   overflow: visible;
 }
@@ -194,12 +200,12 @@
   width: 90%;
   letter-spacing: 0.15vw;
   margin-left: 5%;
-  border-bottom: 0.4vh solid #11324C;
+  border-bottom: 0.4vh solid #11324c;
   height: 8vh;
   line-height: 8vh;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   color: rgb(236, 244, 252);
-  -webkit-text-stroke: 0.15vh #11324D;
+  -webkit-text-stroke: 0.15vh #11324d;
   text-shadow: 0.1vh 0.1vh 0.2vh rgba(0, 0, 0, 0.5);
   margin-bottom: -1vh;
 }
@@ -233,36 +239,48 @@
   border: 0.17vh solid rgb(131, 158, 192);
 }
 
-.rankbox_first, .rankbox_second, .rankbox_third {
+.rankbox_first,
+.rankbox_second,
+.rankbox_third {
   justify-content: space-around;
   display: flex;
   margin-left: 5%;
   margin-right: 7%;
-  width: 86%;
   height: 7vh;
   line-height: 2vh;
   font-weight: 900;
   margin-top: 5vh;
   font-size: calc(1vh + 1vw);
-  color: #293643;
 }
 
-.rankbox_first div p{
-  background: linear-gradient(to right, #ffd700, #ffec8b);
-  border: 0.22vh solid #daa520;
-  color: #8b6313;
+.rankbox_first div {
+  width: 70%;
 }
 
-.rankbox_second div p{
+.rankbox_second div {
+  width: 70%;
+}
+
+.rankbox_third div {
+  width: 70%;
+}
+
+.rankbox_first div p {
   background: linear-gradient(to right, #c0c0c0, #e6e6e6);
   border: 0.22vh solid #a9a9a9;
   color: #4f4f4f;
 }
 
-.rankbox_third div p{
-  background: linear-gradient(to right, #cd7f32, #deb887);
-  border: 0.22vh solid #9a6742;
-  color: #8b4513;
+.rankbox_second div p {
+  background: linear-gradient(to right, #c0c0c0, #e6e6e6);
+  border: 0.22vh solid #a9a9a9;
+  color: #4f4f4f;
+}
+
+.rankbox_third div p {
+  background: linear-gradient(to right, #c0c0c0, #e6e6e6);
+  border: 0.22vh solid #a9a9a9;
+  color: #4f4f4f;
 }
 
 .rankbox_first .rankbox_num {
@@ -306,7 +324,9 @@
   padding-top: 2vh;
   font-size: calc(1vh + 0.9vw);
   border: 1px solid #2d4567;
-  box-shadow: 0 0 0 1px #3a5171, 0 0 0 2px #475d7c, 0 0 0 3px #546987, 0 0 0 4px #617592, 0 0 0 5px #6f819c, 0 0 0 6px #7c8da7, 0 0 0 7px #8999b2, 0 0 0 8px #96a5bd;
+  box-shadow: 0 0 0 1px #3a5171, 0 0 0 2px #475d7c, 0 0 0 3px #546987,
+    0 0 0 4px #617592, 0 0 0 5px #6f819c, 0 0 0 6px #7c8da7, 0 0 0 7px #8999b2,
+    0 0 0 8px #96a5bd;
   background: linear-gradient(#f4ece1, #f9f4ea);
   border-radius: 1%;
 
@@ -328,7 +348,7 @@
   padding-top: 0.2vh;
   padding-left: 0.5vw;
   padding-right: 0.5vw;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
 }
 
 .hidden-word {
