--- a/src/style/lobby.css
+++ b/src/style/lobby.css
@@ -41,7 +41,7 @@
 }
 
 .lb_sidebar_profile::before {
-  content: '';
+  content: "";
   width: 12vw;
   position: absolute;
   height: 12vw;
@@ -117,7 +117,7 @@
   background-color: #d3cf54;
 }
 
-.lb_sidebar_delete {
+.lb_sidebar_logout {
   height: 10%;
   display: flex;
   justify-content: center;
@@ -125,7 +125,7 @@
   padding-top: 5px;
 }
 
-.lb_sidebar_delete_button {
+.lb_sidebar_logout_button {
   background-color: #e74c3c;
   color: white;
   border: none;
@@ -137,12 +137,20 @@
   width: 42%;
 }
 
-.lb_sidebar_delete_button:hover {
+.lb_sidebar_logout_button:hover {
   background-color: #c0392b;
 }
 
-.lb_sidebar_delete_button:active {
+.lb_sidebar_logout_button:active {
   background-color: #e74c3c;
+}
+
+.lb_sidebar_delete_button {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
 }
 
 .lb_sidebar_bottom {
@@ -160,7 +168,7 @@
 
 .lb_sidebar_list {
   width: 80%;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   color: #3a4a61;
   font-size: 2.3vh;
   padding: 1vh;
@@ -291,7 +299,6 @@
 
 .lb_roomlist {
   width: 75%;
-  height: 80vh;
   margin: 0 auto;
   margin-top: 5vh;
   margin-bottom: 5vh;
@@ -300,7 +307,7 @@
   justify-content: space-around;
   align-content: flex-start;
   overflow-y: auto;
-  padding: 20px;
+  padding-top: 50px;
   box-sizing: border-box;
 }
 
@@ -322,6 +329,7 @@
   flex-direction: column;
   justify-content: center;
   z-index: 5;
+  position: relative;
 }
 
 .lb_roombox:hover {
@@ -353,13 +361,15 @@
 }
 
 .lb_roombox_num {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   justify-content: center;
   width: 6vh;
   height: 6vh;
-  margin: 0 auto;
-  margin-top: -1vh;
   border-radius: 50%;
   background-color: #9db3d6;
   font-size: calc(1.1vh + 1vw);
@@ -374,29 +384,27 @@
   font-size: calc(1vh + 1vw);
   font-weight: bold;
   color: #3a4a61;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
 }
 
-.lb_roombox_admin {
-  margin-top: -0.5vh;
-  font-size: calc(0.7vh + 0.6vw);
-  color: #0e1e37;
+.lb_roombox_bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .lb_botcontainer {
-  margin-top: auto;
-  display: flex;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
   height: 18vh;
-  justify-content: center;
-  align-items: center;
-  width: 60%;
-  margin: 0 auto;
   z-index: 5;
+  display: flex;
+  justify-content: center;
 }
 
 .lb_roomMake {
-  position: relative;
-  width: 10vw;
   height: 40%;
   padding: 1vh 2vh;
   font-size: calc(1vh + 1vw);
@@ -407,7 +415,7 @@
   border-radius: 1vh;
   cursor: pointer;
   transition: all 0.1s ease;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   z-index: 5;
 }
 
@@ -421,16 +429,16 @@
   box-shadow: 0 0 0 1px #4d607d;
 }
 
-.lb_formcontainer, .lb_passwordContainer {
+.lb_formcontainer,
+.lb_passwordContainer {
   position: fixed;
   margin-left: 17vw;
   width: 25%;
   z-index: 1000000;
-  height: 25%;
   font-size: 2.4vh;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 50px 20px;
   background-color: #cfd9ec;
   border-radius: 2vh;
   border: 1px solid #5a6c8a;
@@ -448,7 +456,7 @@
   width: 6vw;
   text-align: right;
   color: #3a4a61;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
 }
 
 .lb_formcontainer form {
@@ -460,7 +468,8 @@
   height: 100%;
 }
 
-.lb_roomname, .lb_roomPassword {
+.lb_roomname,
+.lb_roomPassword {
   width: 18vh;
   outline: none;
   border: 0;
@@ -481,7 +490,7 @@
 
 .lb_passwordInputGroup {
   color: #3a4a61;
-  font-family: 'Cafe24Ssurround'; 
+  font-family: "Cafe24Ssurround";
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -496,13 +505,17 @@
 }
 
 .lb_submit {
-  margin-top: 2.5vh;
-  padding: 0.7vh 2vw;
+  position: absolute;
+  bottom: -11px;
+  left: 50%;
+  width: 80%;
+  height: 22px;
+  transform: translate(-50%, 0);
   background-color: #9db3d6;
   color: white;
   border: none;
   border-radius: 1.5vh;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   font-size: calc(0.8vh + 0.8vw);
   cursor: pointer;
   transition: all 0.3s ease;
@@ -512,11 +525,9 @@
 .lb_submit:hover {
   background-color: #b9cbe9;
   color: #3a4a61;
-  transform: translateY(-2px);
 }
 
 .lb_submit:active {
-  transform: translateY(0);
   box-shadow: 0 0 0 1px #5a6c8a, 0 0 0 2px #3d4d65;
 }
 
@@ -529,12 +540,12 @@
   font-size: 1.2em;
   cursor: pointer;
   color: #3a4a61;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   z-index: 10000000;
 }
 
 .lb_error {
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   position: fixed;
   top: 49.6vh;
   color: rgb(211, 72, 72);
@@ -555,15 +566,14 @@
 }
 
 .lb_rule_content {
+  font-family: "Cafe24Ssurround";
   position: absolute;
-  width: 30vw;
-  height: 36vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: start;
   background-color: #cfd9ec;
-  padding: 0.7vw;
+  padding: 1.4vw;
   z-index: 90000;
   cursor: default;
   border-radius: 1.5vh;
@@ -582,7 +592,6 @@
 .lb_rule_content ul {
   list-style: "※  ";
   padding: 0;
-  margin-left: 2.5vw;
   margin-top: 0;
 }
 
@@ -601,7 +610,7 @@
 .lb_rule_content .highlightt {
   font-size: calc(0.85vh + 0.85vw);
   font-weight: bold;
-  color: #D9534F;
+  color: #d9534f;
   letter-spacing: 0.2vw;
 }
 
