--- a/src/style/waitingRoom.css
+++ b/src/style/waitingRoom.css
@@ -11,7 +11,7 @@
 }
 
 .wr_container::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -25,6 +25,22 @@
   transform-origin: 0px 5000px;
   opacity: 0.05;
   z-index: -1;
+}
+
+.wr_delete {
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 20px;
+  border: none;
+  background: linear-gradient(to bottom, #94a7cb, #6e7d8d);
+  box-shadow: 0 0 0 1px #63758e, 0 0 0 2px #4f6180;
+  padding: 8px 10px;
+  border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
 }
 
 .wr_back {
@@ -53,7 +69,7 @@
 
 .wr_back::before,
 .wr_back::after {
-  content: '';
+  content: "";
   position: absolute;
 }
 
@@ -104,15 +120,14 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   font-size: calc(2vh + 2vw);
   color: #f8f4f0;
   text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
   background: linear-gradient(to bottom, #a0bbed, #718ca9);
   padding: 1.5vh 2.5vw;
   border-radius: 2vh;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3),
-    inset 0 0 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3), inset 0 0 20px rgba(0, 0, 0, 0.5);
   letter-spacing: 0.2vw;
   text-transform: uppercase;
   width: 40vw;
@@ -122,28 +137,9 @@
   z-index: 1;
 }
 
-.wr_title input {
-  position: absolute;
-  text-align: center;
-  font-size: calc(1.8vh + 1.8vw);
-  font-family: 'Cafe24Ssurround';
-  color: #343434;
-  top: 50%;
-  width: 100%;
-  height: 100%;
-  transform: translatey(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #63758e;
-  outline: none;
-  border-radius: 1.5vh;
-  letter-spacing: 0.15vw;
-}
-
 .wr_container::after {
   background-color: #92a8cc;
-  content: '';
+  content: "";
   position: fixed;
   margin-left: 17.5vw;
   margin-top: 17vh;
@@ -165,9 +161,10 @@
   box-shadow: 0 0 0 1px #7f94b5, 0 0 0 2px #697fa4, 0 0 0 3px #414f65;
   background: linear-gradient(to bottom right, #a6bcdf, #b9cbe9);
   display: flex;
+  justify-content: flex-start;
+  align-content: flex-start;
   flex-wrap: wrap;
   border-radius: 2vh;
-  justify-content: center;
   z-index: 2;
 }
 
@@ -175,14 +172,16 @@
 .wr_player2,
 .wr_player3,
 .wr_player4 {
-  margin-top: 4%;
+  margin-top: 3%;
+  margin-bottom: 1.5%;
   margin-left: 5%;
   margin-right: 5%;
   width: 40%;
   height: 35%;
   border-radius: 2vh;
   border: 1px solid black;
-  box-shadow: 0 0 0 1.5px rgb(190, 190, 190), 0 0 0 3.5px rgb(167, 167, 167), 0 0 0 5px rgb(154, 154, 154), 0 0 0 6px rgb(94, 94, 94);
+  box-shadow: 0 0 0 1.5px rgb(190, 190, 190), 0 0 0 3.5px rgb(167, 167, 167),
+    0 0 0 5px rgb(154, 154, 154), 0 0 0 6px rgb(94, 94, 94);
   display: flex;
   flex-direction: column;
   position: relative;
@@ -196,7 +195,7 @@
   width: 100%;
   border-bottom: 1px solid black;
   height: 18%;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   display: flex;
   justify-content: center;
   align-items: center;
@@ -237,7 +236,7 @@
   font-size: calc(1vh + 1vw);
   margin-bottom: 2vh;
   text-align: center;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
 }
 
 .wr_kickbutton {
@@ -250,7 +249,7 @@
   border-radius: 1vh;
   cursor: pointer;
   transition: all 0.2s ease;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   letter-spacing: 0.1vw;
   -webkit-text-stroke: 0.05vh #303030;
   box-shadow: 0 0 0 1px #c55f5f, 0 0 0 2px #820606;
@@ -272,7 +271,7 @@
   right: 1vw;
   background: none;
   border: none;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   font-size: calc(1.2vh + 1.2vw);
   color: gray;
   cursor: pointer;
@@ -286,7 +285,6 @@
 .wr_cancelbutton:active {
   transform: scale(0.95);
   color: gray;
-
 }
 
 .wr_x {
@@ -369,7 +367,7 @@
 }
 
 .wr_player4::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   left: 50%;
@@ -381,11 +379,20 @@
   border-bottom: 5px solid rgba(64, 64, 64);
   border-right: 5px solid rgba(64, 64, 64);
   z-index: 1;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 57% 100%, 56% 80%, 40% 85%, 40% 100%, 0 100%);
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 100%,
+    57% 100%,
+    56% 80%,
+    40% 85%,
+    40% 100%,
+    0 100%
+  );
 }
 
 .wr_player4::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   left: 50%;
@@ -399,13 +406,15 @@
 }
 
 .wr_bottom {
+  position: absolute;
+  bottom: 3%;
+  right: 5%;
   width: 90%;
-  margin-top: 3%;
-  margin-bottom: 2%;
   height: 15%;
   border-radius: 2vh;
   border: 1px solid black;
-  box-shadow: 0 0 0 1.5px rgb(190, 190, 190), 0 0 0 3.5px rgb(167, 167, 167), 0 0 0 5px rgb(154, 154, 154), 0 0 0 6px rgb(94, 94, 94);
+  box-shadow: 0 0 0 1.5px rgb(190, 190, 190), 0 0 0 3.5px rgb(167, 167, 167),
+    0 0 0 5px rgb(154, 154, 154), 0 0 0 6px rgb(94, 94, 94);
   display: flex;
   align-items: center;
   background: linear-gradient(to bottom, #889eba, #9db3d6);
@@ -447,16 +456,33 @@
 .wr_bottom_start {
   border: 1px solid #c56b5f;
   box-shadow: 0 0 0 1px #821406, 0 0 0 2px #690d01;
-  width: 28%;
   height: 80%;
+  padding: 0 5px;
   margin-left: 6%;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 1.2vh;
-  background: linear-gradient(to bottom, rgb(255, 0, 0), rgb(195, 0, 0), rgb(114, 1, 1));
+  background: linear-gradient(
+    to bottom,
+    rgb(255, 0, 0),
+    rgb(195, 0, 0),
+    rgb(114, 1, 1)
+  );
   color: #eef4f4;
   -webkit-text-stroke: calc(0.06vh + 0.06vw) #690d01;
+  font-weight: 900;
+  font-size: calc((1.1vh + 1.1vw));
+  letter-spacing: 0.1vw;
+}
+
+.wr_bottom_start_count {
+  height: 80%;
+  margin-left: 6%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 15px;
   font-weight: 900;
   font-size: calc((1.1vh + 1.1vw));
   letter-spacing: 0.1vw;
@@ -484,7 +510,12 @@
   align-items: center;
   justify-content: center;
   border-radius: 1.2vh;
-  background: linear-gradient(to bottom, rgb(255, 187, 0), rgb(195, 143, 0), rgb(115, 84, 0));
+  background: linear-gradient(
+    to bottom,
+    rgb(255, 187, 0),
+    rgb(195, 143, 0),
+    rgb(115, 84, 0)
+  );
   color: #eef4f4;
   -webkit-text-stroke: calc(0.06vh + 0.06vw) #694a01;
   font-weight: 900;
@@ -513,7 +544,12 @@
   align-items: center;
   justify-content: center;
   border-radius: 1.2vh;
-  background: linear-gradient(to bottom, rgb(210, 210, 210), rgb(168, 168, 168), rgb(95, 95, 95));
+  background: linear-gradient(
+    to bottom,
+    rgb(210, 210, 210),
+    rgb(168, 168, 168),
+    rgb(95, 95, 95)
+  );
   color: #eef4f4;
   -webkit-text-stroke: calc(0.06vh + 0.06vw) #5e5e5e;
   font-weight: 900;
@@ -616,7 +652,7 @@
   position: absolute;
   font-size: calc(1.2vh + 1.2vw);
   letter-spacing: 0.1vw;
-  font-family: 'Cafe24Ssurround';
+  font-family: "Cafe24Ssurround";
   display: flex;
   justify-content: center;
   align-items: center;
@@ -626,12 +662,13 @@
   height: 6vh;
   border-radius: 3vh;
   box-shadow: 0 0 0 2px #726825, 0 0 0 3px #322e11;
-  background: linear-gradient(to top, #f0da45, #dec947, #b09b3a) top, linear-gradient(to bottom, #f0da45, #dec947, #b09b3a) bottom;
+  background: linear-gradient(to top, #f0da45, #dec947, #b09b3a) top,
+    linear-gradient(to bottom, #f0da45, #dec947, #b09b3a) bottom;
   background-size: 100% 50%;
   background-repeat: no-repeat;
   color: #fffce9;
   -webkit-text-stroke: calc(0.04vh + 0.05vw) #574f1c;
-  transition: width 0.5s ease;
+  transition: all 0.5s ease;
   z-index: 4;
 }
 
@@ -640,12 +677,6 @@
   scale: 1.01;
   box-shadow: 0 0 0 2px #726825, 0 0 0 4px #322e11;
 }
-
-.wr_rule:active {
-  scale: 1;
-  box-shadow: 0 0 0 2px #726825, 0 0 0 3px #322e11;
-}
-
 
 .wr_rule.active {
   width: 30vw;
@@ -666,17 +697,15 @@
   width: 4.2vh;
   margin-left: 0.7vh;
   border-radius: 50%;
-  float: left;
   font-family: "VITRO";
   font-weight: 600;
   font-size: calc(1.8vh + 1.8vw);
-  transition: transform 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .wr_rule:hover::before {
   background-color: #e5da78;
   border: 1px solid #fdfae4;
-  cursor: pointer;
   box-shadow: 0 0 0 2px #a99e47, 0 0 0 4px #706736;
 }
 
@@ -685,11 +714,11 @@
 }
 
 .wr_rule_content {
+  font-family: "Cafe24Ssurround";
   position: absolute;
   right: 5vw;
-  top: 8vh;
+  top: 9vh;
   width: 30vw;
-  height: 42vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -697,16 +726,16 @@
   background: linear-gradient(to bottom, #f4eb8b, #fffbc4);
   border-bottom-left-radius: 3vh;
   border-bottom-right-radius: 3vh;
-  padding: 0.7vw;
+  padding: 10px;
+  padding-top: 30px;
   box-shadow: 0 0 0 2px #726825, 0 0 0 3px #322e11;
   opacity: 0;
-  transition: opacity 1s ease;
+  transition: all 0.5s ease;
   z-index: 3;
 }
 
 .wr_rule_content.visible {
   opacity: 0.9;
-  transition: opacity 1s ease;
 }
 
 .wr_rule_content h3 {
@@ -740,7 +769,7 @@
 .wr_rule_content .highlightt {
   font-size: calc(0.85vh + 0.85vw);
   font-weight: bold;
-  color: #D9534F;
+  color: #d9534f;
   letter-spacing: 0.2vw;
 }
 
